PROJECT=cocoa-sharp
VERSION=0.1

lib_LTLIBRARIES=libFoundationGlue.la

libFoundationGlue_la_SOURCES =				\
	NSAppleEventDescriptor_glue.m \
	NSAppleEventManager_glue.m \
	NSAppleScript_glue.m \
	NSArchiver_glue.m \
	NSArray_glue.m \
	NSAssertionHandler_glue.m \
	NSAttributedString_glue.m \
	NSAutoreleasePool_glue.m \
	NSBundle_glue.m \
	NSCachedURLResponse_glue.m \
	NSCalendarDate_glue.m \
	NSCharacterSet_glue.m \
	NSClassDescription_glue.m \
	NSCloneCommand_glue.m \
	NSCloseCommand_glue.m \
	NSCoder_glue.m \
	NSConditionLock_glue.m \
	NSConnection_glue.m \
	NSCountedSet_glue.m \
	NSCreateCommand_glue.m \
	NSData_glue.m \
	NSDateFormatter_glue.m \
	NSDate_glue.m \
	NSDecimalNumberHandler_glue.m \
	NSDecimalNumber_glue.m \
	NSDeleteCommand_glue.m \
	NSDeserializer_glue.m \
	NSDictionary_glue.m \
	NSDirectoryEnumerator_glue.m \
	NSDistantObjectRequest_glue.m \
	NSDistantObject_glue.m \
	NSDistributedLock_glue.m \
	NSDistributedNotificationCenter_glue.m \
	NSEnumerator_glue.m \
	NSError_glue.m \
	NSException_glue.m \
	NSFileHandle_glue.m \
	NSFileManager_glue.m \
	NSFormatter_glue.m \
	NSHTTPCookieStorage_glue.m \
	NSHTTPCookie_glue.m \
	NSHTTPURLResponse_glue.m \
	NSHost_glue.m \
	NSIndexSet_glue.m \
	NSIndexSpecifier_glue.m \
	NSInputStream_glue.m \
	NSInvocation_glue.m \
	NSKeyedArchiver_glue.m \
	NSKeyedUnarchiver_glue.m \
	NSLock_glue.m \
	NSLogicalTest_glue.m \
	NSMachBootstrapServer_glue.m \
	NSMachPort_glue.m \
	NSMessagePortNameServer_glue.m \
	NSMethodSignature_glue.m \
	NSMoveCommand_glue.m \
	NSMutableArray_glue.m \
	NSMutableAttributedString_glue.m \
	NSMutableCharacterSet_glue.m \
	NSMutableData_glue.m \
	NSMutableDictionary_glue.m \
	NSMutableIndexSet_glue.m \
	NSMutableSet_glue.m \
	NSMutableString_glue.m \
	NSMutableURLRequest_glue.m \
	NSNameSpecifier_glue.m \
	NSNetServiceBrowser_glue.m \
	NSNetService_glue.m \
	NSNotificationCenter_glue.m \
	NSNotificationQueue_glue.m \
	NSNotification_glue.m \
	NSNull_glue.m \
	NSNumberFormatter_glue.m \
	NSNumber_glue.m \
	NSObject_glue.m \
	NSOutputStream_glue.m \
	NSPipe_glue.m \
	NSPortCoder_glue.m \
	NSPortMessage_glue.m \
	NSPortNameServer_glue.m \
	NSPort_glue.m \
	NSPositionalSpecifier_glue.m \
	NSProcessInfo_glue.m \
	NSPropertyListSerialization_glue.m \
	NSProtocolChecker_glue.m \
	NSProxy_glue.m \
	NSQuitCommand_glue.m \
	NSRangeSpecifier_glue.m \
	NSRecursiveLock_glue.m \
	NSRelativeSpecifier_glue.m \
	NSRunLoop_glue.m \
	NSScanner_glue.m \
	NSScriptClassDescription_glue.m \
	NSScriptCoercionHandler_glue.m \
	NSScriptCommandDescription_glue.m \
	NSScriptCommand_glue.m \
	NSScriptExecutionContext_glue.m \
	NSScriptObjectSpecifier_glue.m \
	NSScriptSuiteRegistry_glue.m \
	NSScriptWhoseTest_glue.m \
	NSSerializer_glue.m \
	NSSetCommand_glue.m \
	NSSet_glue.m \
	NSSocketPortNameServer_glue.m \
	NSSocketPort_glue.m \
	NSSortDescriptor_glue.m \
	NSSpecifierTest_glue.m \
	NSSpellServer_glue.m \
	NSStream_glue.m \
	NSString_glue.m \
	NSTask_glue.m \
	NSThread_glue.m \
	NSTimeZone_glue.m \
	NSTimer_glue.m \
	NSURLAuthenticationChallenge_glue.m \
	NSURLCache_glue.m \
	NSURLConnection_glue.m \
	NSURLCredentialStorage_glue.m \
	NSURLCredential_glue.m \
	NSURLDownload_glue.m \
	NSURLHandle_glue.m \
	NSURLProtectionSpace_glue.m \
	NSURLProtocol_glue.m \
	NSURLRequest_glue.m \
	NSURLResponse_glue.m \
	NSURL_glue.m \
	NSUnarchiver_glue.m \
	NSUndoManager_glue.m \
	NSUniqueIDSpecifier_glue.m \
	NSUserDefaults_glue.m \
	NSValueTransformer_glue.m \
	NSValue_glue.m \
	NSWhoseSpecifier_glue.m \
	NSXMLParser_glue.m 
libFoundationGlue_la_LDFLAGS = -x objective-c -framework Cocoa 
libFoundationGlue_la_LIBADD = 
libFoundationGlue_ls_LIBS = -framework Cocoa
