lib_LTLIBRARIES=libWebKitGlue.la

libWebKitGlue_la_SOURCES =				\
	WebBackForwardList_glue.m \
	WebHistoryItem_glue.m \
	WebView_glue.m \
	WebDataSource_glue.m \
	WebHistory_glue.m \
	WebFrame_glue.m \
	WebPreferences_glue.m

libWebKitGlue_la_LDFLAGS = -module -x objective-c -framework Cocoa
libWebKitGlue_la_LIBADD = 
