PROJECT=cocoa-sharp
VERSION=0.1

lib_LTLIBRARIES=libAppKitGlue.la
libAppKitGlue_la_SOURCES =				\
	NSATSTypesetter_stub.m 		\
	NSActionCell_stub.m 			\
	NSAccessibility_stub.m 			\
	NSAppleScriptExtensions_stub.m		\
	NSAffineTransform_stub.m 		\
	NSAlert_stub.m 			\
	NSApplicationScripting_stub.m	\
	NSApplication_stub.m 		\
	NSArrayController_stub.m 		\
	NSAttributedString_stub.m 		\
	NSBezierPath_stub.m 			\
	NSBitmapImageRep_stub.m 		\
	NSBox_stub.m 			\
	NSBrowserCell_stub.m 		\
	NSBrowser_stub.m 			\
	NSButtonCell_stub.m 			\
	NSButton_stub.m 			\
	NSCachedImageRep_stub.m 		\
	NSCell_stub.m 			\
	NSClipView_stub.m 			\
	NSColorList_stub.m 			\
	NSColorPanel_stub.m 			\
	NSColorPicker_stub.m 		\
	NSColorPicking_stub.m 		\
	NSColorWell_stub.m 			\
	NSColor_stub.m 			\
	NSComboBoxCell_stub.m 		\
	NSComboBox_stub.m 			\
	NSControl_stub.m 			\
	NSController_stub.m 			\
	NSCursor_stub.m 			\
	NSCustomImageRep_stub.m 		\
	NSDocumentController_stub.m 		\
	NSDocumentScripting_stub.m 		\
	NSDocument_stub.m 			\
	NSDragging_stub.m 			\
	NSDrawer_stub.m 			\
	NSEPSImageRep_stub.m 		\
	NSErrors_stub.m 			\
	NSEvent_stub.m 			\
	NSFileWrapper_stub.m 		\
	NSFontDescriptor_stub.m 		\
	NSFontManager_stub.m 		\
	NSFontPanel_stub.m 			\
	NSFont_stub.m 			\
	NSForm_stub.m 			\
	NSFormCell_stub.m 			\
	NSGlyphGenerator_stub.m 		\
	NSGlyphInfo_stub.m 			\
	NSGraphicsContext_stub.m 		\
	NSGraphics_stub.m 			\
	NSHelpManager_stub.m 		\
	NSImageCell_stub.m 			\
	NSImageRep_stub.m 			\
	NSImageView_stub.m 			\
	NSImage_stub.m 			\
	NSInputManager_stub.m 		\
	NSInputServer_stub.m 		\
	NSInterfaceStyle_stub.m 		\
	NSKeyValueBinding_stub.m 		\
	NSLayoutManager_stub.m 		\
	NSMatrix_stub.m 			\
	NSMenuItemCell_stub.m 		\
	NSMenuItem_stub.m 			\
	NSMenuView_stub.m 			\
	NSMenu_stub.m 			\
	NSMovieView_stub.m 			\
	NSMovie_stub.m 			\
	NSNibConnector_stub.m 		\
	NSNibControlConnector_stub.m		\
	NSNibDeclarations_stub.m 		\
	NSNibLoading_stub.m 			\
	NSNibOutletConnector_stub.m 		\
	NSNib_stub.m 			\
	NSObjectController_stub.m 		\
	NSOpenGLView_stub.m 			\
	NSOpenGL_stub.m 			\
	NSOpenPanel_stub.m 			\
	NSOutlineView_stub.m 		\
	NSPDFImageRep_stub.m 		\
	NSPICTImageRep_stub.m 		\
	NSPageLayout_stub.m 			\
	NSPanel_stub.m 			\
	NSParagraphStyle_stub.m 		\
	NSPasteboard_stub.m 			\
	NSPopUpButtonCell_stub.m 		\
	NSPopUpButton_stub.m 		\
	NSPrintInfo_stub.m 			\
	NSPrintOperation_stub.m 		\
	NSPrintPanel_stub.m 			\
	NSPrinter_stub.m 			\
	NSProgressIndicator_stub.m 		\
	NSQuickDrawView_stub.m 		\
	NSResponder_stub.m 			\
	NSRulerMarker_stub.m 		\
	NSRulerView_stub.m 			\
	NSSavePanel_stub.m 			\
	NSScreen_stub.m 			\
	NSScrollView_stub.m 			\
	NSScroller_stub.m 			\
	NSSearchFieldCell_stub.m 		\
	NSSearchField_stub.m 		\
	NSSecureTextField_stub.m 		\
	NSSegmentedCell_stub.m 		\
	NSSegmentedControl_stub.m 		\
	NSShadow_stub.m 			\
	NSSlider_stub.m 			\
	NSSliderCell_stub.m 			\
	NSSound_stub.m 			\
	NSSpeechRecognizer_stub.m 		\
	NSSpeechSynthesizer_stub.m 		\
	NSSpellChecker_stub.m 		\
	NSSpellProtocol_stub.m 		\
	NSSpellServer_stub.m 		\
	NSSplitView_stub.m 			\
	NSStatusBar_stub.m 			\
	NSStatusItem_stub.m 			\
	NSStepperCell_stub.m 		\
	NSStepper_stub.m 			\
	NSStringDrawing_stub.m 		\
	NSTabViewItem_stub.m 		\
	NSTabView_stub.m 			\
	NSTableColumn_stub.m 		\
	NSTableHeaderCell_stub.m 		\
	NSTableHeaderView_stub.m 		\
	NSTableView_stub.m 			\
	NSTextAttachment_stub.m 		\
	NSTextContainer_stub.m 		\
	NSTextFieldCell_stub.m 		\
	NSTextField_stub.m 			\
	NSTextStorageScripting_stub.m	\
	NSTextStorage_stub.m 		\
	NSTextView_stub.m 			\
	NSText_stub.m 			\
	NSToolbarItem_stub.m 		\
	NSToolbar_stub.m 			\
	NSTypesetter_stub.m 			\
	NSUserDefaultsController_stub.m 	\
	NSUserInterfaceValidation_stub.m 	\
	NSView_stub.m 			\
	NSWindowController_stub.m 		\
	NSWindowScripting_stub.m 		\
	NSWindow_stub.m 			\	
	NSWorkspace_stub.m 			

libAppKitGlue_la_LDFLAGS = -module -x objective-c -framework Cocoa 
libAppKitGlue_la_LIBADD = 
